@@ -22,9 +22,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $Id: dwarf_add_line_entry.3 2122 2011-11-09 15:35:14Z jkoshy $
+.\" $Id: dwarf_add_line_entry.3 2953 2013-06-30 20:21:38Z kaiwang27 $
 .\"
-.Dd September 13, 2011
+.Dd June 30, 2013
 .Os
 .Dt DWARF_ADD_LINE_ENTRY 3
 .Sh NAME
@@ -38,7 +38,7 @@
 .Fo dwarf_add_line_entry
 .Fa "Dwarf_P_Debug dbg"
 .Fa "Dwarf_Unsigned filendx"
-.Fa "Dwarf_Addr code_off"
+.Fa "Dwarf_Addr off"
 .Fa "Dwarf_Unsigned lineno"
 .Fa "Dwarf_Signed column"
 .Fa "Dwarf_Bool is_stmt"
@@ -65,9 +65,9 @@ Valid source file indices are those returned by the function
 .Xr dwarf_add_file_decl 3 .
 .Pp
 Argument
-.Ar code_off
-specifies the program address offset, relative to the base address
-set by a prior call to the function
+.Ar off
+specifies a relocatable program address. The ELF symbol to be used
+for relocation is set by a prior call to the function
 .Xr dwarf_lne_set_address 3 .
 .Pp
 Argument
@@ -82,7 +82,7 @@ If the argument
 .Ar is_stmt
 is set to true, it indicates that the instruction at the address
 specified by argument
-.Ar code_off
+.Ar off
 is a recommended breakpoint location, i.e., the first instruction in
 the instruction sequence generated by the source line.
 .Pp
@@ -90,7 +90,7 @@ If the argument
 .Ar basic_block
 is set to true, it indicates that the instruction at the address
 specified by argument
-.Ar code_off
+.Ar off
 is the first instruction of a basic block.
 .Pp
 If argument
